--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     </head>
     <body>
         
+        <h2>A Simple Calculator</h2>
+        
         <div id="container">
-            <h1>A Simple Calculator</h1>
-            <h4>A Simple JavaScript Project 1234</h4>
             <div id="calculator">
                 <div id="results">
                     <div id="history">
@@ -44,6 +44,7 @@
                 </div>
             </div>
         </div>
+        <h6>Developed by Abduz Zami</h6>
         <script src="script.js"></script>
     </body>
 </html>
